--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -20,6 +20,8 @@
                 <ui-select 
                     $empty-text="Nothing selected" 
                     $options="this.options"
+                    $keep-selected-options="false"
+                    $empty-item-text="Nope"
                     $selection-mode="multi"/>
             </div>
         </div>
