--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="cases" mjs-app>
-            <div class="case" 
+            <div class="case double" 
                 {init}="
                     this.options = [
                         {id: 1, name: 'AAA'},
@@ -22,6 +22,8 @@
                     $options="this.options"
                     $keep-selected-options="false"
                     $empty-item-text="Nope"
+                    $searchable
+                    $css-dialog
                     $selection-mode="multi"/>
             </div>
         </div>
