ui.Select fixes

--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -24,7 +24,7 @@
                     $empty-item-text="Nope"
                     $searchable
                     $css-dialog
-                    $selection-mode="multi"/>
+                    $selection-mode="single"/>
             </div>
         </div>
     </body>
