Select: readonly; reference nodes

--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -18,10 +18,10 @@
                 ">
                 <p>Select</p>
                 <ui-select 
-                    $empty-text="Nothing selected" 
-                    $options="this.options"
-                    $keep-selected-options="false"
-                    $empty-item-text="Nope"
+                    $empty-text:="Nothing selected" 
+                    $options*="this.options"
+                    $keep-selected-options:="false"
+                    $empty-item-text:="Nope"
                     $searchable
                     $css-dialog
                     $selection-mode="single"/>
