cmp directive init moved to Component

--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -25,7 +25,7 @@
                     $empty-item-text:="Nope"
                     $searchable
                     $css-dialog
-                    $model="this.sval"
+                    {model}="this.sval"
                     $selection-mode="single"></ui-select>
 
                 <input type="number" {model}="this.sval">
