+ ui.Input; small fixes

--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -29,6 +29,9 @@
                     $selection-mode="single"></ui-select>
 
                 <input type="number" {model}="this.sval">
+
+                <ui-input {model}="this.sval" 
+                            $type="number"></ui-input>
             </div>
         </div>
     </body>
