Container: get items from declarative markup

--- a/dev-test/container.html
+++ b/dev-test/container.html
@@ -6,6 +6,8 @@
     <script src="metaphorjs.ui.js"></script>
     </head>
     <body mjs-app="Test.ContainerApp" id="container-app">
-
+        <parent3>
+            <cmp4></cmp4>
+        </parent3>
     </body>
 </html>
