--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -26,7 +26,8 @@
                     $searchable
                     $css-dialog
                     {model}="this.sval"
-                    $selection-mode="single"></ui-select>
+                    $selection-mode="single">
+                </ui-select>
 
                 <input type="number" {model}="this.sval">
 
