--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -27,6 +27,7 @@
                     $css-dialog
                     {model}="this.sval"
                     $selection-mode="single">
+                    <i class="tags icon" @before></i>
                 </ui-select>
 
                 <input type="number" {model}="this.sval">
