--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -38,6 +38,10 @@
                     <i class="tags icon" @before></i>
                     <a class="ui tag label" @after>Add Tag</a>
                 </ui-input>
+
+                <ui-button $text="Click me" (click)="console.log('ok')">
+                    <i class="user icon" @before></i>
+                </ui-button>
             </div>
         </div>
     </body>
