+ Menu, MenuItem, MenuDivider classes

--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -43,6 +43,13 @@
                     <i class="user icon" @before></i>
                 </ui-button>
             </div>
-        </div>
+            <div class="case double" >
+                <p>Menu markup</p>
+                <ui-menu>
+                    <a class="item">Test</a>
+                </ui-menu>
+                <p>Menu code</p>
+            </div>
+        
     </body>
 </html>
