finished menu test

--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -55,7 +55,7 @@
                         (click)="console.log('click3')"></ui-menu-item>
                 </ui-menu>
                 <p>Menu code</p>
-                <div id="dynamic-menu"></div>
+                <!--##dynamic-menu-->
             </div>
         
     </body>
