--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -16,7 +16,7 @@
                         {id: 3, name: 'CCC'}
                     ]
                 ">
-                <p>Select</p>
+                <p>Inputs</p>
                 <ui-select 
                     $empty-text:="Nothing selected" 
                     $options*="this.options"
@@ -38,22 +38,43 @@
                     <a class="ui tag label" @after>Add Tag</a>
                 </ui-input>
 
-                <ui-button $text="Click me" (click)="console.log('ok')">
+                <ui-button 
+                        $text="Click me" 
+                        {class}:="dropdown"
+                        (click)="console.log('ok')" 
+                        {dropdown.$ref}="menu">
                     <i class="user icon" @before></i>
+                    <i class="dropdown icon" @after></i>
+                    <ui-menu $ref="menu">
+                        <a class="item" 
+                            (click)="console.log('click1')">Test</a>
+                        <ui-menu-item 
+                            $text="Menu item"
+                            $on--click="console.log('click2')"></ui-menu-item>
+                    </ui-menu>
                 </ui-button>
             </div>
             <div class="case double" >
                 <p>Menu markup</p>
-                <ui-menu>
+                <ui-menu {class}:="vertical">
                     <a class="item" 
                         (click)="console.log('click1')">Test</a>
                     <ui-menu-item 
-                        $text="Menu item"
-                        $on--click="console.log('click2')"></ui-menu-item>
+                        $text="Menu item">
+                        <i class="dropdown icon" @after></i>
+                        <ui-menu>
+                            <a class="item" 
+                                (click)="console.log('click11')">Test</a>
+                            <ui-menu-item 
+                                $text="Sub">
+                            </ui-menu-item>
+                        </ui-menu>
+                    </ui-menu-item>
                     <ui-menu-item 
                         $text="Menu item 2"
+                        {class}:="active"
                         (click)="console.log('click3')">
-                        <div class="ui label" @after>51</div>
+                        <div class="ui label" @after {bind}="this.sval"></div>
                     </ui-menu-item>
                     <ui-input {class}:="transparent" 
                                 $placeholder:="Input field"
