--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -54,16 +54,17 @@
                     </ui-menu>
                 </ui-button>
             </div>
+            
             <div class="case double" >
                 <p>Menu markup</p>
                 <ui-menu {class}:="vertical">
                     <a class="item" 
-                        (click)="console.log('click1')">Test</a>
+                        (click)="console.log('click1')">Test1</a>
                     <ui-menu-item 
                         $text="Menu item">
                         <i class="dropdown icon" @after></i>
                         <ui-menu>
-                            <a class="item" (click)="console.log('click11')">Test</a>
+                            <a class="item" (click)="console.log('click11')">Test2</a>
                             <ui-menu-item $text:="Sub"></ui-menu-item>
                         </ui-menu>
                     </ui-menu-item>
