--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -33,7 +33,7 @@
                         $text="Click me" 
                         (click)="console.log(this.$eventCmp)" 
                         {dropdown.$ref}:="menu">
-                    <i class="user icon" @before></i>
+                    <i class="user icon" @icon></i>
                     <i class="dropdown icon" @after></i>
                     <ui-menu $ref="menu">
                         <a class="item" (click)="console.log('click11')">Test11</a>
