--- a/dev-test/index.html
+++ b/dev-test/index.html
@@ -175,6 +175,11 @@
                     $label="Radio 3"
                     {model}="this.$root.sval"></ui-radio>
             </div>
+            <div class="double case">
+                <ui-color-picker>
+                    
+                </ui-color-picker>
+            </div>
         </div>
     </body>
 </html>
